[package]
name = "kaim"
version = "0.1.0"
edition = "2021"

[profile.full]
inherits = "release"
strip = true
lto = true
codegen-units = 1

[lib]
name = "kaim"
crate-type = ["cdylib"]

[dependencies]
kaim-types = { path = "../kaim-types" }

lazy_static = "1.4.0"
bitflags = "2.5.0"
serde = { version = "1.0.197", features = ["derive"] }
ron = "0.8.1"
derive_more = "0.99.17"

[dependencies.pyo3]
version = "0.21.1"
features = ["extension-module"]
